[package]
name = "hurryvc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws", "json"] }
base64 = "0.22.1"
cfg-if = "1.0.4"
clap = { version = "4.5.60", features = ["derive", "env"] }
crossterm = "0.29.0"
directcpp = "0.1.16"
futures = "0.3.32"
json5 = "1.3.1"
log = "0.4.29"
mime_guess = "2.0.5"
portable-pty = "0.9.0"
rand = "0.10.0"
rust-embed = "8.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "process", "signal", "sync", "time", "io-util", "fs", "net"] }
tokio-stream = "0.1.18"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.7"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
vt100 = "0.16.2"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Console", "Win32_System_IO", "Win32_System_Threading"] }

[build-dependencies]
build-vcxproj = "0.1.6"
